--- a/estilo.css
+++ b/estilo.css
@@ -40,11 +40,12 @@ body {
     background: rgba(215, 255, 252, 0.507);
     border-radius: 4px 4px 4px 4px;
     font-weight: 300;
+    -webkit-tap-highlight-color: transparent;
 }
 
 
 #calculadora > button:hover {
-    background-color: #99d3e094 !important;
+    opacity: 0.7;
 }
 
 /* BOTÕES COLORIDOS */
@@ -142,4 +143,14 @@ body {
     #calculadora {
         grid-template-columns: repeat(4, 88px);
     }
+
+    #calculadora > button:hover {
+        opacity: 1;
+    }
 }
+
+@media (any-pointer: coarse) {
+   button {
+    background-color: transparent;
+   }
+  }
